--- a/assistant.ipynb
+++ b/assistant.ipynb
@@ -590,6 +590,90 @@
    "source": [
     "clf.score(xtest,ytest)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#speech recognition using tkinter gui\n",
+    " \n",
+    "from gtts import gTTS\n",
+    "import speech_recognition as sr\n",
+    "import os\n",
+    "import re\n",
+    "import time\n",
+    "from weather import Weather, Unit\n",
+    "\n",
+    "def rep():\n",
+    "    a=mycommand()\n",
+    "    talkToMe(a) \n",
+    "    while True:\n",
+    "        if(a=='exit'):\n",
+    "            break\n",
+    "        else:\n",
+    "            a=mycommand()\n",
+    "            #talkToMe(a)\n",
+    "\n",
+    "def talkToMe(audio):\n",
+    "    tts=gTTS(text=audio,lang='hi')\n",
+    "    tts.save('hello.mp3')\n",
+    "    os.system('hello.mp3')\n",
+    "\n",
+    "def mycommand():\n",
+    "    r=sr.Recognizer()\n",
+    "    with sr.Microphone() as source:\n",
+    "        print(\"Now please enter your command\")\n",
+    "        r.pause_threshold=1\n",
+    "        r.adjust_for_ambient_noise(source,duration=1)\n",
+    "        audio=r.listen(source)\n",
+    "        try:\n",
+    "            command=r.recognize_google(audio, language=\"en-IN\") #hi-IN\n",
+    "            print(\"you said: \" +command+\"\\n\")\n",
+    "            if 'current weather in' in command:\n",
+    "                reg_ex = re.search('current weather in (.*)', command)\n",
+    "                if reg_ex:\n",
+    "                    city = reg_ex.group(1)\n",
+    "                    weather = Weather(unit=Unit.CELSIUS)\n",
+    "                    location = weather.lookup_by_location(city)\n",
+    "                    condition = location.condition\n",
+    "                    forecasts = location.forecast\n",
+    "                    for forecast in forecasts[]:\n",
+    "                        print(forecast.text)\n",
+    "                        print(forecast.date)\n",
+    "                        print(forecast.high)\n",
+    "                        print(forecast.low)\n",
+    "                        #x=\"On \" + forecast.date + \", the weather will be \" + forecast.text\n",
+    "                        #y=\" with estimated maximum temperature as \" + forecast.high + \"degree celsius and with estimated minimum temperature as \" + forecast.low + \" degree celsius\"\n",
+    "                        z='On %s the weather will be %s with estimated maximum temperature as %s degree' % (forecast.date, forecast.text, forecast.high)\n",
+    "                        a='celsius and with estimated minimum temperature as %s degree celsius ' % (forecast.low)\n",
+    "                        #talkToMe(x)\n",
+    "                        talkToMe(z)\n",
+    "                        time.sleep(6)\n",
+    "\n",
+    "                        talkToMe(a)\n",
+    "                        time.sleep(6)\n",
+    "                        \n",
+    "                        \n",
+    "                    \n",
+    "                    \n",
+    "        except sr.UnknownValueError:\n",
+    "            #assistant(mycommand())\n",
+    "            print(\"Your command couldn't be heard\")\n",
+    "            command = myCommand();\n",
+    "    return command\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Implementation of assistant \n",
+    "rep()"
+   ]
   }
  ],
  "metadata": {
